--- a/static/css/app-consolidated.css
+++ b/static/css/app-consolidated.css
@@ -1404,6 +1404,9 @@ img {
   display: flex;
   flex-direction: column;
   gap: var(--space-3, 0.75rem);
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .source-item {
